--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
 <html>
   <body>
-
+    <p>High Volt Plaza</p>
 
     <p>Welcome to High Volt Plaza</p>
-    <p> <a href="http://neocities.org"> Check out Neocities! </a> </p>
     
     <h2>
     <ul>
