test image+ new color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>High Volt Plaza</title>
 
     <p>Welcome to High Volt Plaza</p>
+    <img src="assets/placeholder.png" alt="test image">
+
     
     <h2>
     <ul>
