figuring html out

--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
-<html>
+<html lang="en">
+  <head>
+    <style>
+      p {
+        background-image: url("assets/orange_gradient.png");
+      }
+      </style>
+  </head>
   <body>
     <title>High Volt Plaza</title>
 
     <p>Welcome to High Volt Plaza</p>
     <img src="assets/placeholder.png" alt="test image">
-
-    
-    <h2>
-    <ul>
-    <li>coding</li>
-    <li>
-    <a href="https://x.com/Electr0Gunner">art</a>
-    </li>
-    <li>reading comics</li>
-    </ul>
-    </h2>
-    
   </body>
+  
 </html>
 
 
