--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <style>
-      p {
-        background-image: url("assets/orange_gradient.png");
-      }
-      </style>
-  </head>
-  <body>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>High Volt Plaza</title>
-
-    <p>Welcome to High Volt Plaza</p>
-    <img src="assets/placeholder.png" alt="test image">
+  </head>
+  <body background="assets/orange_gradient.png">
+    
   </body>
-  
 </html>
-
-
