--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>High Volt Plaza</title>
   </head>
-  <body background="assets/orange_gradient.png">
+  <body style="background: url(assets/orange_gradient.png), url(assets/basic_black.png); background-size: cover; background-repeat: no-repeat;">
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
     
   </body>
 </html>
