--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>High Volt Plaza</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background: url(assets/orange_gradient.png), url(assets/basic_black.png); background-size: cover; background-repeat: no-repeat;">
     <h1>This is a heading</h1>
